# nsd052021

./: README.md  detect_tesseract.py  docker-compose.yml  upload.sh
back/: .gitignore  DEV.csv  detect_tesseract.py  edge_writer.py  main.py  pyproject.toml
back/internal/: cors.py  create_app.py  processing.py
back/ml/: table_generation.py
back/models/: models.py  tables.py
back/routers/: api.py
front/: package.json
front/src/: App.tsx  data.json  index.css
front/src/components/: Preview.module.css  Preview.tsx
front/src/exporting/: excel.tsx  word.tsx
modelserver/: Dockerfile
utils/: run_back.sh  run_front.sh
