[tool.poetry]
name = "nsd-backend"
version = "0.2.0"
description = "Backend service for our hackathon solution"
authors = ["Artyom Sosedka <m1801239@edu.misis.ru>", "Vladislav Tishin <lmvibe@outlook.com>", "Leon Minasyan <ierehon1905@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.65.1"
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
loguru = "^0.5.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
