[tool.poetry]
authors = ["Artyom Sosedka <m1801239@edu.misis.ru>", "Vladislav Tishin <lmvibe@outlook.com>", "Leon Minasyan <ierehon1905@gmail.com>"]
description = "Backend service for our hackathon solution"
name = "nsd-backend"
version = "0.2.0"

[tool.poetry.dependencies]
fastapi = "^0.65.1"
loguru = "^0.5.3"
python = "^3.9"
python-multipart = "^0.0.5"
starlette = "^0.14.2"
tesseract = "^0.1.3"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
